syntax = "proto3";
package msg;

enum Result {
    REGISTER_SUCCESS=0;
    REGISTER_FAIL=1;
    LOGIN_SUCCESS=2;
    LOGIN_FAIL=3;
}

message Test {
	string Test = 2;
}

// 用户登陆协议
message UserLogin  {
    string LoginName = 1;   // 用户名
    string LoginPW =2;      // 密码
}
// 注册协议
message UserRegister {
    string LoginName =1;    // 用户名
    string LoginPW =2;      // 密码
}
// 消息返回协议
message UserResult {
    Result RetResult =1;
    string ErrorInfo = 2;
}

// 玩家有角色的情况
message UserST {
    string UID    =1;       // 账号ID
    string ServerID =2;     // 服务器ID
    string RoleUID  =3;     // 角色UID
    string RoleName =4;     // 角色名字
    string RoleLev =5;      // 角色等级
    string Coin  =6;        // 金币
    // 其他的暂时不做定义
}